--- a/gb/16/9/9/n8284365.md
+++ b/gb/16/9/9/n8284365.md
@@ -1,30 +1,29 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>15年巧思凝聚面包花展</h2>
-
 <h6></h6>
 <hr>
-	<p>【大纪元2016年09月10日讯】走进温西的一房屋，仿佛进入花的海洋：玫瑰、蝴蝶兰、剑兰、绣球、百合花等竞相吐艳，这些就是<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%97%E6%9D%8E%E6%B7%91%E6%9E%9D.md#1">林李淑枝</a>的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%A2%E5%8C%85%E8%8A%B1.md#1">面包花</a>作品，凝聚着她15年的坚持与心思巧意，也蕴含着许多感人的故事。9月30日至 10月4日，她将举办个人面包花作品展（http://www.nancylin.net/），向公众分享她的面包花、国画、糖花、木器彩绘等约100 多件艺术作品。</p>
-<figure id="attachment_8284417" aria-describedby="caption-attachment-8284417" style="width: 290px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_8ddef79ac2024ae1aaef97debb54ed10-290x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284417 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_8ddef79ac2024ae1aaef97debb54ed10-290x400.jpg" alt="“幸福花篮” （林李淑枝个人网页）" width="290" b="400" /></a><figcaption id="caption-attachment-8284417" class="wp-caption-text">“幸福花篮” <ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%9E%97%E6%9D%8E%E6%B7%91%E6%9E%9D.md#1">林李淑枝</a>个人网页）</figcaption></figure>
+	<p>【大纪元2016年09月10日讯】走进温西的一房屋，仿佛进入花的海洋：玫瑰、蝴蝶兰、剑兰、绣球、百合花等竞相吐艳，这些就是林李淑枝的面包花作品，凝聚着她15年的坚持与心思巧意，也蕴含着许多感人的故事。9月30日至 10月4日，她将举办个人面包花作品展（http://www.nancylin.net/），向公众分享她的面包花、国画、糖花、木器彩绘等约100 多件艺术作品。</p>
+<figure id="attachment_8284417" aria-describedby="caption-attachment-8284417" style="width: 290px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_8ddef79ac2024ae1aaef97debb54ed10-290x400.jpg" target="_blank" rel="noreferrer noopener"> <img fetchpriority="high" decoding="async" class="wp-image-8284417 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_8ddef79ac2024ae1aaef97debb54ed10-290x400.jpg" alt="“幸福花篮” （林李淑枝个人网页）" width="290" b="400" /></a><figcaption id="caption-attachment-8284417" class="wp-caption-text">“幸福花篮” （林李淑枝个人网页）</figcaption></figure>
 <p>1997年，她与先生同甘共苦37年后，先生突然仙逝，她的世界仿佛塌了。痛苦了四年后，林李淑枝领悟到应该过有意义的丰富人生。她开始重新规划生活，寻回早年遗忘的艺术之爱。</p>
 <p>淑枝说：“虽然我们无法控制生命的长短，但至少可提升生活的品质，让它更多姿多采，丰富美满。”</p>
-<figure id="attachment_8284395" aria-describedby="caption-attachment-8284395" style="width: 277px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_efc8d38ae36f4eb4b5386ee21f992772-277x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284395 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_efc8d38ae36f4eb4b5386ee21f992772-277x400.jpg" alt="“匠心独到” （林李淑枝个人网页）" width="277" b="400" /></a><figcaption id="caption-attachment-8284395" class="wp-caption-text">“匠心独到” （林李淑枝个人网页）</figcaption></figure>
-<p>从65岁开始，她尽心从头学习，常至废寝忘食，她学习电子琴、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%9D%A2%E5%8C%85%E8%8A%B1.md#1">面包花</a>艺、木器彩绘、粘土细工、人形雕塑、国画、拼布等艺术，充实自己的人生，又创造出富有灵感的艺术品。</p>
-<figure id="attachment_8284403" aria-describedby="caption-attachment-8284403" style="width: 290px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_75c29141d61e4ba497132154378d8eff-290x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284403 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_75c29141d61e4ba497132154378d8eff-290x400.jpg" alt="“彩蝶飞舞” （林李淑枝个人网页）" width="290" b="400" /></a><figcaption id="caption-attachment-8284403" class="wp-caption-text">“彩蝶飞舞” （林李淑枝个人网页）</figcaption></figure>
+<figure id="attachment_8284395" aria-describedby="caption-attachment-8284395" style="width: 277px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_efc8d38ae36f4eb4b5386ee21f992772-277x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-8284395 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_efc8d38ae36f4eb4b5386ee21f992772-277x400.jpg" alt="“匠心独到” （林李淑枝个人网页）" width="277" b="400" /></a><figcaption id="caption-attachment-8284395" class="wp-caption-text">“匠心独到” （林李淑枝个人网页）</figcaption></figure>
+<p>从65岁开始，她尽心从头学习，常至废寝忘食，她学习电子琴、面包花艺、木器彩绘、粘土细工、人形雕塑、国画、拼布等艺术，充实自己的人生，又创造出富有灵感的艺术品。</p>
+<figure id="attachment_8284403" aria-describedby="caption-attachment-8284403" style="width: 290px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_75c29141d61e4ba497132154378d8eff-290x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-8284403 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_75c29141d61e4ba497132154378d8eff-290x400.jpg" alt="“彩蝶飞舞” （林李淑枝个人网页）" width="290" b="400" /></a><figcaption id="caption-attachment-8284403" class="wp-caption-text">“彩蝶飞舞” （林李淑枝个人网页）</figcaption></figure>
 <p>淑枝秉承了父母的艺术天分，也承袭了他们的刻苦耐劳、好学不倦与勇于创作的智慧。对于艺术创造，她更有心得体验：“艺术不难，但需要有耐性，辛苦勤学，再加上不倦的练习，才能有丰硕的成果。”</p>
 <p><strong>小孙女误以为真水果</strong></p>
-<p><img class="aligncenter wp-image-8284387 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/09/Fanny_2043-450x299.jpg" alt="Fanny_2043" width="450" b="299" />桌上摆着一水果盘，盛着草莓、葡萄、樱桃等。一次，孙女进来看到后，抓起樱桃就送进嘴里，被林李淑枝及时制止，担心之余她也开心自己作品的逼真性。她还记得自己的黄色花蓝，去年在台湾文化节展出，也曾骗倒了蜜蜂，每天飞来采蜜。</p>
+<p><img decoding="async" class="aligncenter wp-image-8284387 size-medium" src="http://i.epochtimes.com/assets/uploads/2016/09/Fanny_2043-450x299.jpg" alt="Fanny_2043" width="450" b="299" />桌上摆着一水果盘，盛着草莓、葡萄、樱桃等。一次，孙女进来看到后，抓起樱桃就送进嘴里，被林李淑枝及时制止，担心之余她也开心自己作品的逼真性。她还记得自己的黄色花蓝，去年在台湾文化节展出，也曾骗倒了蜜蜂，每天飞来采蜜。</p>
 <p>面包花起源于拉丁美洲，日本人将它发扬光大。面包花制作精随是以高科技黏土，作出鲜花的真实感与生命力，并溶入艺术的境界，着重花朵的细致，“鲜花逼真以达仿真花的最高境界”（根据百科词条），其作品完成后可永久保留。</p>
-<figure id="attachment_8284407" aria-describedby="caption-attachment-8284407" style="width: 296px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_07e9f3e2519b47a0bec192101137f7aa-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284407 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_07e9f3e2519b47a0bec192101137f7aa-296x400.jpg" alt="“清丽脱俗” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284407" class="wp-caption-text">“清丽脱俗” （林李淑枝个人网页）</figcaption></figure>
+<figure id="attachment_8284407" aria-describedby="caption-attachment-8284407" style="width: 296px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_07e9f3e2519b47a0bec192101137f7aa-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-8284407 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_07e9f3e2519b47a0bec192101137f7aa-296x400.jpg" alt="“清丽脱俗” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284407" class="wp-caption-text">“清丽脱俗” （林李淑枝个人网页）</figcaption></figure>
 <p>林李淑枝擅长面包花制作的花卉、人物与应用创作，更喜欢实用的吊饰、蜡烛台、糖果盒等，比如：一对“甜甜”与“蜜蜜”之烛、爱心满满的“爱情花篮”、“满室生辉”的镜饰，无不展现其巧妙心思。</p>
-<figure id="attachment_8284409" aria-describedby="caption-attachment-8284409" style="width: 296px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_dc20771c038e482f9ff69e33e032287c-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284409 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_dc20771c038e482f9ff69e33e032287c-296x400.jpg" alt="“清秀佳人” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284409" class="wp-caption-text">“清秀佳人” （林李淑枝个人网页）</figcaption></figure>
+<figure id="attachment_8284409" aria-describedby="caption-attachment-8284409" style="width: 296px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_dc20771c038e482f9ff69e33e032287c-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-8284409 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_dc20771c038e482f9ff69e33e032287c-296x400.jpg" alt="“清秀佳人” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284409" class="wp-caption-text">“清秀佳人” （林李淑枝个人网页）</figcaption></figure>
 <p>制作面包花，听起来不难，制造出一幅高品质的逼真作品却很不容易。为了做好一个观音像，淑枝心怀恭敬，总制造了38个头像，才终获得老师的首肯。</p>
 <p><strong>源泉不断的艺术创造</strong></p>
 <p>走进向往的艺术殿堂，林李淑枝不放过任何一个学习的机会，她往返于温哥华与台北两地，虚心拜师学艺。她师从过林千蕙、周咏真、林孟祥、游曜鸿、许莉香、黄书亚、素秀兰及孙金海 等近12位老师，涉猎范围广泛。</p>
-<p><img class="aligncenter wp-image-8284388 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/09/Fanny_DSC_2054-450x299.jpg" alt="Fanny_DSC_2054" width="450" b="299" />温哥华繁多的奇花异草、天然美景，都带给林李淑枝创作的灵感。她用心地模仿鲜花异草，一一上色组合后，插入不同的花器中，一件鲜活雅致的艺术品诞生了——“大地逢春”、“君子好逑”、“清纯之恋”、“贵气临门”，等等。</p>
+<p><img decoding="async" class="aligncenter wp-image-8284388 size-medium" src="http://i.epochtimes.com/assets/uploads/2016/09/Fanny_DSC_2054-450x299.jpg" alt="Fanny_DSC_2054" width="450" b="299" />温哥华繁多的奇花异草、天然美景，都带给林李淑枝创作的灵感。她用心地模仿鲜花异草，一一上色组合后，插入不同的花器中，一件鲜活雅致的艺术品诞生了——“大地逢春”、“君子好逑”、“清纯之恋”、“贵气临门”，等等。</p>
 <p>林李淑枝的创造灵感来自现实生活。郊外一根枯枝或河边石头，或朋友送来一个破损的花瓶，她都能够巧手回春，化腐朽为神奇，变换成一件件艺术品——“大地回春”、“平安归巢”等。</p>
-<figure id="attachment_8284419" aria-describedby="caption-attachment-8284419" style="width: 296px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2016/09/23375a_4f409039a3dd4721bb439ea5dc52fe4c-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img class="wp-image-8284419 size-medium_vertical" src="https://i.epochtimes.com/assets/uploads/2016/09/23375a_4f409039a3dd4721bb439ea5dc52fe4c-296x400.jpg" alt="“金壁辉煌” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284419" class="wp-caption-text">“金壁辉煌” （林李淑枝个人网页）</figcaption></figure>
+<figure id="attachment_8284419" aria-describedby="caption-attachment-8284419" style="width: 296px" class="wp-caption aligncenter"><ahref=" http://i.epochtimes.com/assets/uploads/2016/09/23375a_4f409039a3dd4721bb439ea5dc52fe4c-296x400.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="wp-image-8284419 size-medium_vertical" src="http://i.epochtimes.com/assets/uploads/2016/09/23375a_4f409039a3dd4721bb439ea5dc52fe4c-296x400.jpg" alt="“金壁辉煌” （林李淑枝个人网页）" width="296" b="400" /></a><figcaption id="caption-attachment-8284419" class="wp-caption-text">“金壁辉煌” （林李淑枝个人网页）</figcaption></figure>
 <p>学无止境，林李淑枝希望未来作品能够日新月异。展望未来，她希望自己，“让面包花如新鲜花朵一样，更灿烂、芬芳，富有力, 让我的人生更加精彩和丰盛。”</p>
 <p>“欣赏一件美丽的作品是享受，而创作更是一种无法言语的快乐，艺术让我自由地表达内心的情感，我希望通过缤纷色彩，来提升作品的震撼力与产生情感的共鸣。”?◇</p>
 <p><strong>林李淑枝面包花展</strong></p>
@@ -32,45 +31,34 @@
 10/1早上 11:00 有茶点招待，欢迎参与<br />
 地址：VanDusen Botanical Garden （Great Hall ），5251 Oak St, Vancouver ◇</p>
 <p>责任编辑：邓林</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/1/7/n1968018.md#1">一条龙服务   温哥华婚礼展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/10/30/n2314497.md#1">林月娥纸黏土及面包花家饰展</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/28/n2377719.md#1">纸绣再创事业第二春  沈海蓉活得精彩</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/9/11/16/n2724042.md#1">温哥华第36届手工艺展 4万观众进场</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/31/n11489359.md#1" target="_blank">法轮功洪传欧洲 多族裔民众：找到生命意义</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/2/n9691133.md#1" target="_blank">从上海到巴黎 前国企高管的坚守之路</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13979276.md#1">【时事人物】台湾2024看板：赖清德</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/13/n13971971.md#1">联耳三兔 跨越时空的传奇图腾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/10/n13969693.md#1">【古道人生】贞女凭一首诗识破假新郎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/22/n13978646.md#1">【未解之谜】古代开颅手术</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975486.md#1">【天道有知】为人着想 给人一食救了自己</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982287.md#1">【新唐人大视野】数字人民币背后 藏何猫腻？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/26/n13982357.md#1">【菁英论坛】卢沙野撒野掀风暴 习外交陷困境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981571.md#1">【中国禁闻】机密文件：中央政法委指挥方斌案</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981398.md#1">女子在天安门广场高呼“打倒共产党”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981338.md#1">上海冰淇淋事件后 网红请吃雪糕 有人用车拉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980741.md#1">全面建立不动产登记制 分析：中共要收房产税</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980916.md#1">分享旅行6大宠妻行为 港星陈豪获网民赞赏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980813.md#1">直播带货遭中共官媒点名 刘畊宏等恐被割韭菜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/23/n13979914.md#1">范冰冰现身香港拍广告 状态获网民夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981565.md#1">奥斯卡影帝凯奇自曝曾负巨债：是房地产害的</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958891.md#1">每天接触毒素易生病 5种奇特排毒法超简单</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/25/n13981212.md#1">世界各地30名百岁人瑞分享长寿秘诀（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/29/n13960579.md#1">名中医的补脑养颜汤 让你的大脑更年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970820.md#1">著名音乐人因它病逝 4类人高危 1种维生素可预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/24/n13980015.md#1">葡萄让血管回春！每天这样吃抗氧化护心脏</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/9/n8284365.htm">15年巧思凝聚面包花展</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/16/9/9/n8284365.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/9/9/n8284365.htm">15年巧思凝聚面包花展</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/9/9/n8284365.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
